# capmonstercloud-client-rust

./: Cargo.toml
.idea_run/: Cargo tree.run.xml  Run tests.run.xml
examples/: main.rs
src/: client.rs  errors.rs  http_client.rs  lib.rs  limits.rs  modules.rs  options.rs  proxy_type.rs  task.rs  timeouts.rs  urls.rs
src/error/: mod.rs  response_error.rs
src/requests/: mod.rs  tasks_data.rs  tasks_names.rs
src/responses/: mod.rs  tasks_data.rs
src/tests/: mod.rs
